add header and footer

--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,10 @@ body {
   left: 0;
   width: 100%;
 }
-.footer__container {
+.nav {
   display: flex;
   justify-content: center;
+  gap: 20px;
   background: #000;
   padding: 20px;
 }
