--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-/*
+@import "./header.css";
+@import "./footer.css";
+@import "./card.css"; /*
 damit setze ich einige styles zum 0
 */
 *,
@@ -7,124 +9,31 @@ damit setze ich einige styles zum 0
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  border: 0;
 }
-
-body {
-  line-height: 1;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
+button {
+  background: none;
+  border: none;
 }
-
+li {
+  list-style: none;
+}
 .wrapper {
-  min-height: 100%;
   max-width: 1400px;
-  margin: 0 auto;
-  color: #000;
-}
-.header {
-  color: white;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  border-bottom: 2px solid #000;
-}
-.header__container {
-  padding: 20px;
-  text-align: center;
 }
 
-.header__title {
-  font-size: 26px;
-}
+/*
+#########################header#########################
+*/
 
+/*
+#########################main#########################
+*/
 .page {
   margin-top: 80px;
 }
 .page__container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0px 15px;
-}
-.page__column {
-  position: relative;
-  padding: 0 15px;
-  flex: 0 1 25%;
-  margin: 0px 0px 30px 0px;
-}
-.page__item {
-  height: 100%;
-  padding: 30px 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-shadow: 0px 2px 10px #333;
-  border-radius: 5px;
-}
-.page__item:hover {
-  box-shadow: 0px 2px 15px #333;
-}
-.page__title {
-  margin-top: 20px;
-  font-size: 16px;
-}
-.page__item img {
-  position: absolute;
-  top: -10px;
-  right: 15px;
-  width: 40px;
-}
-.page__button {
-  margin-top: 30px;
-  background: none;
-  border: 1px solid #333;
-  padding: 10px 20px;
-  border-radius: 5px;
-}
-.page__button:hover {
-  background: lightgray;
-}
-.page__tags {
-  align-self: flex-start;
-  margin-top: 30px;
-}
-.tags__link {
-  text-decoration: none;
-  color: #000;
-  padding: 5px;
-  background: lightgray;
-  border-radius: 5px;
-}
-.tags__link:hover {
-  background: rgb(226, 226, 226);
-}
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
 }
 
-.nav {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  background: white;
-  padding: 20px;
-  border-top: 2px solid #000;
-}
-.link img {
-  cursor: pointer;
-  width: 40px;
-}
-.link-home img:hover {
-  margin-top: -2px;
-}
-.link-bookmarks img:hover {
-  margin-top: -2px;
-}
-.link-profile img:hover {
-  margin-top: -2px;
-}
+/*
+#########################footer#########################
+*/
